--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,140 @@
 /* ----------------------------
 ---- ByteForce Indonesia ------
------- Albert's Website -------
+------ Grand ABE's Website -------
 -----------------------------*/
 body {
   margin: 0;
   padding: 0; }
+
+.wrapper {
+  height: 500%; }
+
+#navigation {
+  border: 0;
+  background: rgba(0, 0, 0, 0.3);
+  box-shadow: 0;
+  margin: -5.8vh 0 0 0;
+  padding: 0 2em 0 2em;
+  height: 5vh;
+  border-radius: 0;
+  font-size: 2em;
+  font-weight: 300; }
+  #navigation #navbar {
+    margin: 0; }
+    #navigation #navbar .in {
+      background: #fff;
+      border: 0; }
+    #navigation #navbar a {
+      color: #ccc;
+      background: transparent;
+      opacity: 0.8;
+      transition: all .2s ease-in-out; }
+    #navigation #navbar a:hover {
+      color: #333; }
+    #navigation #navbar ul li .active a {
+      color: #fff; }
+
+#firstPage {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: url("../images/home_large.jpg");
+  background-size: cover;
+  color: #fff; }
+  #firstPage .logoName {
+    margin-top: 3em; }
+    #firstPage .logoName h1 {
+      font-weight: 300; }
+      #firstPage .logoName h1 strong {
+        font-weight: 500; }
+  #firstPage .homeLine {
+    margin-top: 50%;
+    font-size: 16px; }
+    #firstPage .homeLine button {
+      margin-top: 1em;
+      border: 1px solid #fff;
+      font-weight: 300;
+      padding: 0.3em 1em 0.3em 1em;
+      font-size: 24px;
+      opacity: 0.7;
+      transition: opacity .35s ease-in-out;
+      background: transparent; }
+    #firstPage .homeLine button:hover {
+      opacity: 1; }
+
+#pageTwo {
+  height: 100vh;
+  width: 100%; }
+  #pageTwo #booking {
+    height: 37vh;
+    background: #272c2d; }
+    #pageTwo #booking .bookingNow {
+      margin-top: 5em;
+      color: #fff; }
+      #pageTwo #booking .bookingNow h1 {
+        font-weight: 300; }
+        #pageTwo #booking .bookingNow h1 strong {
+          font-weight: 500; }
+    #pageTwo #booking .bookingPanel {
+      width: 80%;
+      height: 35vh;
+      background: #fff;
+      margin-top: 3em;
+      box-shadow: 7px 12px 62px -12px rgba(0, 0, 0, 0.75);
+      padding: 2em;
+      padding-bottom: 1em; }
+      #pageTwo #booking .bookingPanel .day #dayBig {
+        margin-top: -5px;
+        font-size: 7em;
+        font-weight: 400; }
+      #pageTwo #booking .bookingPanel .day h5 {
+        font-size: 3em;
+        font-weight: 300; }
+      #pageTwo #booking .bookingPanel .day select {
+        margin-top: 1.5em;
+        font-size: 0;
+        background-color: #272c2d; }
+      #pageTwo #booking .bookingPanel .month #monthBig {
+        margin-top: -5px;
+        font-size: 7em;
+        font-weight: 400; }
+      #pageTwo #booking .bookingPanel .month h5 {
+        font-size: 3em;
+        font-weight: 300; }
+      #pageTwo #booking .bookingPanel .month select {
+        margin-top: 1.5em;
+        font-size: 0;
+        background-color: #272c2d; }
+      #pageTwo #booking .bookingPanel .year #yearBig {
+        margin-top: -5px;
+        font-size: 7em;
+        font-weight: 400; }
+      #pageTwo #booking .bookingPanel .year h5 {
+        font-size: 3em;
+        font-weight: 300; }
+      #pageTwo #booking .bookingPanel .year select {
+        margin-top: 1.5em;
+        font-size: 0;
+        background-color: #272c2d; }
+      #pageTwo #booking .bookingPanel .formBook input[type=text] {
+        margin-top: 2.7em;
+        border: 0;
+        border-bottom: 2px solid #ccc;
+        font-size: 1.1em;
+        transition: border .35s ease-in-out;
+        width: 100%; }
+      #pageTwo #booking .bookingPanel .formBook input[type=text]:focus {
+        border: 0;
+        border-bottom: 2px solid #000;
+        outline: none; }
+      #pageTwo #booking .bookingPanel .formBook input[type=submit] {
+        background: transparent;
+        border: 1px solid #ccc;
+        margin-top: 2em;
+        font-size: 1.5em;
+        width: 100%;
+        transition: border .35s ease-in-out; }
+      #pageTwo #booking .bookingPanel .formBook input[type=submit]:hover {
+        border: 1px solid #000; }
 
 /*# sourceMappingURL=style.css.map */
