--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,11 +1,269 @@
 /* ----------------------------
 ---- ByteForce Indonesia ------
------- Albert's Website -------
+------ Grand ABE's Website -------
 -----------------------------*/
+
+$primary-color: #272c2d;
+$secondary-color: #fff;
+
+$font-primary: #fff;
+
 
 body
 {
 	margin:0;
 	padding:0;
+}
+
+.wrapper
+{
+	height:500%;
+}
+
+#navigation
+{
+	border:0;
+	background:rgba(0,0,0,0.3);
+	box-shadow: 0;
+	margin:-5.8vh 0 0 0;
+	padding:0 2em 0 2em;
+	height:5vh;
+	border-radius: 0;
+	font-size: 2em;
+	font-weight: 300;
+
+	#navbar
+	{
+		margin:0;
+
+		.in
+		{
+			background:#fff;
+			border:0;
+		}
+
+		a
+		{
+			color:#ccc;
+			background:rgba(0,0,0,0);
+			opacity: 0.8;
+			transition:all .2s ease-in-out;
+		}
+
+		a:hover
+		{
+			color:#333;
+		}
+
+		ul
+		{
+			li
+			{
+				.active
+				{
+					a
+					{
+						color:#fff;
+					}
+				}
+			}
+		}
+	}
+}
+
+#firstPage
+{
+	position:relative;
+	width:100%;
+	height:100vh;
+	background:url('../images/home_large.jpg');
+	background-size: cover;
+	color: $font-primary;
+
+	.logoName
+	{
+		margin-top:3em;
+
+		h1
+		{
+			font-weight: 300;
+
+			strong
+			{
+				font-weight: 500;
+			}
+		}
+	}
+
+	.homeLine
+	{
+		margin-top:50%;
+		font-size: 16px;
+
+		button
+		{
+			margin-top:1em;
+			border: 1px solid $font-primary;
+			font-weight: 300;
+			padding:0.3em 1em 0.3em 1em;
+			font-size: 24px;
+			opacity:0.7;
+			transition: opacity .35s ease-in-out;
+			background:rgba(0,0,0,0);
+		}
+
+		button:hover
+		{
+			opacity:1;
+		}
+	}
+}
+
+#pageTwo
+{
+	height:100vh;
+	width:100%;
+
+	#booking
+	{
+		height:37vh;
+		background:$primary-color;
+
+		.bookingNow
+		{
+			margin-top:5em;
+			color:$font-primary;
+
+			h1
+			{
+				font-weight: 300;
+
+				strong
+				{
+					font-weight: 500;
+				}
+			}
+		}
+
+		.bookingPanel
+		{
+			width:80%;
+			height:35vh;
+			background:$secondary-color;
+			margin-top:3em;
+			box-shadow: 7px 12px 62px -12px rgba(0,0,0,0.75);
+			padding:2em;
+			padding-bottom:1em;
+
+			.day
+			{
+				#dayBig
+				{
+					margin-top: -5px;
+					font-size:7em;
+					font-weight: 400;
+				}
+
+				h5
+				{
+					font-size: 3em;
+					font-weight: 300;
+				}
+
+				select
+				{
+					margin-top: 1.5em;
+					font-size: 0;
+					background-color: $primary-color;
+				}
+			}
+
+			.month
+			{
+				#monthBig
+				{
+					margin-top: -5px;
+					font-size:7em;
+					font-weight: 400;
+				}
+
+				h5
+				{
+					font-size: 3em;
+					font-weight: 300;
+				}
+
+				select
+				{
+					margin-top: 1.5em;
+					font-size: 0;
+					background-color: $primary-color;
+				}
+			}
+
+			.year
+			{
+				#yearBig
+				{
+					margin-top: -5px;
+					font-size:7em;
+					font-weight: 400;
+				}
+
+				h5
+				{
+					font-size: 3em;
+					font-weight: 300;
+				}
+
+				select
+				{
+					margin-top: 1.5em;
+					font-size: 0;
+					background-color: $primary-color;
+				}
+			}
+
+			.formBook
+			{
+				input[type=text]
+				{
+					margin-top:2.7em;
+					border: 0;
+					border-bottom: 2px solid #ccc;
+					font-size: 1.1em;
+					transition: border .35s ease-in-out;
+					width: 100%;
+				}
+
+				input[type=text]:focus
+				{
+					border:0;
+					border-bottom: 2px solid #000;
+					outline: none;
+				}
+
+				input[type=submit]
+				{
+					background:rgba(0,0,0,0);
+					border: 1px solid #ccc;
+					margin-top:2em;
+					font-size: 1.5em;
+					width:100%;
+					transition: border .35s ease-in-out;
+				}
+
+				input[type=submit]:hover
+				{
+					border: 1px solid #000;
+				}
+			}
+		}
+	}
+}
+
+#pageThree
+{
+	
 }
 
