--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,26 +15,43 @@ body
 	padding:0;
 }
 
-.wrapper
+.darkerFilter
 {
-	height:500%;
+	background:rgba(0,0,0,0.4) !important;
+	height:100%;
+
+}
+
+.fixed
+{
+	transition:all .2s ease-in-out;
+	position:fixed !important;
+	top:0 !important;
+	background:#fff !important;
+	width:100% !important;
 }
 
 #navigation
 {
 	border:0;
-	background:rgba(0,0,0,0.3);
-	box-shadow: 0;
-	margin:-5.8vh 0 0 0;
+	background:rgba(0,0,0,0);
+	box-shadow: none;
 	padding:0 2em 0 2em;
+	margin-bottom:0;
+	bottom: 0;
 	height:5vh;
+	width:100%;
 	border-radius: 0;
-	font-size: 2em;
+	font-size: 1.5em;
 	font-weight: 300;
+	position:absolute;
+	transition:all .2s ease-in-out;
+	z-index:1000;
 
 	#navbar
 	{
 		margin:0;
+		border:0;
 
 		.in
 		{
@@ -121,7 +138,7 @@ body
 
 #pageTwo
 {
-	height:100vh;
+	min-height:60vh;
 	width:100%;
 
 	#booking
@@ -264,6 +281,170 @@ body
 
 #pageThree
 {
-	
+	width:100%;
+	height:60vh;
+	overflow:hidden;
+
+	.bedAbout
+	{
+		background:url('../images/bedAbout.jpg');
+		background-size:cover;
+		position:relative;
+		height:60vh;
+	}
+
+	.logoAbout
+	{
+		margin-top:10vh;
+
+		img
+		{
+			max-width: 20vh;
+		}
+	}
+
+	h1
+	{
+		margin-top:1em;
+		font-size:52px;
+		font-weight: 300;
+	}
+
+	p
+	{
+		margin-top:20px;
+		font-size:18px;
+		font-weight: 300;
+	}
+
 }
 
+#pageFour
+{
+	width:100%;
+	height:50vh;
+	background:$primary-color;
+	padding-top:4.5vh;
+
+	.aboutUs
+	{
+		border-bottom: 1px solid #fff;
+
+		h1
+		{
+			font-weight: 300;
+			font-size: 52px;
+			color:#fff;
+			margin-left:10px;
+		}	
+	}
+
+	.aboutUsParagraph
+	{
+		margin-top:5vh;
+
+		p
+		{
+			margin-top:2em;
+			color:#fff;
+		}
+	}
+}
+
+#pageFive
+{
+	background:url('../images/home_large.jpg');
+	background-size: cover;
+	height:50vh;
+	width:100%;
+
+	.wrapMe
+	{
+		.whitePanel
+		{
+			margin-top:15vh;
+			background: $secondary-color;
+			padding:1em;
+			box-shadow: 7px 12px 62px -12px rgba(0,0,0,0.75);
+
+			h1
+			{
+				font-size: 70px;
+				font-weight: 300;
+				text-align: right;
+				margin:0 .5em 0 0;
+			}
+		}
+
+		.virtualTourButton
+		{
+			margin-left:25vh;
+
+			button
+			{
+				background:red;
+				box-shadow: 7px 12px 62px -12px rgba(0,0,0,0.75);
+				border:0;
+				font-size:30px;
+				color:$font-primary;
+				width:80%;
+				padding:.5em 1em .5em 0;
+				font-weight: 300;
+				text-align: right;
+				opacity:0.8;
+				transition: opacity .2s ease-in-out;
+			}
+
+			button:hover
+			{
+				opacity:1;
+			}
+		}
+	}
+}
+
+#footer
+{
+	width:100%;
+	height:40vh;
+	overflow:hidden;
+
+	.leftPanel
+	{
+		background:$primary-color;
+		color:$font-primary;
+		height:40vh;
+		padding:5vh 15vh 1em 3em;
+
+		h4
+		{
+			margin-bottom:1em;
+			font-size: 32px;
+			font-weight: 300;
+		}
+
+		p
+		{
+			font-size:14px;
+			font-weight: 40;
+		}
+	}
+
+	.rightPanel
+	{
+		padding:5vh 2em 1em 1em;
+		
+		h4
+		{
+			margin-bottom:1em;
+			font-size: 32px;
+			font-weight: 300;
+		}
+
+		p
+		{
+			font-size:14px;
+			font-weight: 40;
+		}
+	}
+}
