--- a/assets/scss/styleNotHome.scss
+++ b/assets/scss/styleNotHome.scss
@@ -7,4 +7,183 @@ $primary-color: #272c2d;
 $secondary-color: #fff;
 
 $font-primary: #fff;
+$font-secondary: #000;
 
+@import 'rooms';
+
+body
+{
+	margin:0;
+	padding:0;
+}
+
+.darkerFilter
+{
+	background:rgba(0,0,0,0.4) !important;
+	height:100%;
+
+}
+
+#navigation
+{
+	border:0;
+	background:rgba(255,255,255,0.8);
+	box-shadow: none;
+	padding:0 2em 0 2em;
+	margin-bottom:0;
+	top: 0;
+	width:100%;
+	border-radius: 0;
+	font-size: 1.5em;
+	font-weight: 300;
+	position:fixed;
+	transition:all .2s ease-in-out;
+	z-index:1000;
+	color:$font-secondary;
+
+	h1
+	{
+		font-weight: 300;
+		width:50%;
+		margin-top:1em;
+	}
+
+	img
+	{
+		margin:1em;
+		max-width: 70px;
+	}
+
+	#navbar
+	{
+		margin:0;
+		border:0;
+
+		.in
+		{
+			background:#fff;
+			border:0;
+		}
+
+		a
+		{
+			color:$font-secondary;
+			background:rgba(0,0,0,0);
+			opacity: 0.8;
+			transition:all .2s ease-in-out;
+		}
+
+		a:hover
+		{
+			color:#333;
+		}
+
+		ul
+		{
+			li
+			{
+				.active
+				{
+					a
+					{
+						color:#fff;
+					}
+				}
+			}
+		}
+	}
+}
+
+#firstPage
+{
+	position:relative;
+	width:100%;
+	height:100vh;
+	background:url('../images/home_large.jpg');
+	background-size: cover;
+	color: $font-primary;
+
+	.logoName
+	{
+		margin-top:3em;
+
+		h1
+		{
+			font-weight: 300;
+
+			strong
+			{
+				font-weight: 500;
+			}
+		}
+	}
+
+	.homeLine
+	{
+		margin-top:50%;
+		font-size: 16px;
+
+		button
+		{
+			margin-top:1em;
+			border: 1px solid $font-primary;
+			font-weight: 300;
+			padding:0.3em 1em 0.3em 1em;
+			font-size: 24px;
+			opacity:0.7;
+			transition: opacity .35s ease-in-out;
+			background:rgba(0,0,0,0);
+		}
+
+		button:hover
+		{
+			opacity:1;
+		}
+	}
+}
+
+#footer
+{
+	width:100%;
+	height:40vh;
+	overflow:hidden;
+
+	.leftPanel
+	{
+		background:$primary-color;
+		color:$font-primary;
+		height:40vh;
+		padding:5vh 15vh 1em 3em;
+
+		h4
+		{
+			margin-bottom:1em;
+			font-size: 32px;
+			font-weight: 300;
+		}
+
+		p
+		{
+			font-size:14px;
+			font-weight: 40;
+		}
+	}
+
+	.rightPanel
+	{
+		padding:5vh 2em 1em 1em;
+		
+		h4
+		{
+			margin-bottom:1em;
+			font-size: 32px;
+			font-weight: 300;
+		}
+
+		p
+		{
+			font-size:14px;
+			font-weight: 40;
+		}
+	}
+}
