--- a/assets/scss/rooms.scss
+++ b/assets/scss/rooms.scss
@@ -20,3 +20,23 @@
 	
 }
 
+#roomDetails
+{
+
+	#superiorRoom
+	{
+		height:30vh;
+
+		.picPanelRooms
+		{
+			height:30vh;
+
+			img
+			{
+				height:100%;
+				width:60%;
+				padding-left:30%;
+			}
+		}
+	}
+}
