--- a/assets/scss/styleNotHome.css
+++ b/assets/scss/styleNotHome.css
@@ -7,8 +7,15 @@
 ------ Grand ABE's Website -------
 -----------------------------*/
 #headerRooms {
-  width: 100%;
-  background: #fff; }
+  height: 40vh; }
+  #headerRooms .panelHeaderRooms {
+    z-index: 1000;
+    width: 100%;
+    height: 30vh;
+    margin-top: -10vh;
+    background: #fff;
+    padding: 1em;
+    box-shadow: 7px 12px 62px -12px rgba(0, 0, 0, 0.75); }
 
 body {
   margin: 0;
