--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@ body {
 
 .darkerFilter {
   background: rgba(0, 0, 0, 0.4) !important;
-  height: 100%; }
+  height: 100%;
+  z-index: 10000; }
 
 .fixed {
   transition: all .2s ease-in-out;
@@ -52,9 +53,8 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url("../images/home_large.jpg");
-  background-size: cover;
-  color: #fff; }
+  color: #fff;
+  overflow: hidden; }
   #firstPage .logoName {
     margin-top: 3em; }
     #firstPage .logoName h1 {
@@ -75,6 +75,14 @@ body {
       background: transparent; }
     #firstPage .homeLine button:hover {
       opacity: 1; }
+  #firstPage #parallax {
+    background: url("../images/home_large.jpg");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    z-index: -1000;
+    position: absolute;
+    top: 0; }
 
 #pageTwo {
   min-height: 60vh;
@@ -225,7 +233,7 @@ body {
 
 #footer {
   width: 100%;
-  height: 40vh;
+  height: 35vh;
   overflow: hidden; }
   #footer .leftPanel {
     background: #272c2d;
