--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -7,7 +7,7 @@
 ------ Grand ABE's Website -------
 -----------------------------*/
 #headerRooms {
-  height: 40vh; }
+  height: 30vh; }
   #headerRooms .panelHeaderRooms {
     z-index: 1000;
     width: 100%;
@@ -17,18 +17,196 @@
     padding: 1em;
     box-shadow: 7px 12px 62px -12px rgba(0, 0, 0, 0.75); }
 
-#roomDetails #superiorRoom {
-  height: 30vh; }
-  #roomDetails #superiorRoom .picPanelRooms {
+#roomDetails .room:nth-child(1) .imgRoom {
+  background: url("../images/bedAbout.jpg");
+  background-size: cover; }
+#roomDetails .room:nth-child(2) .imgRoom {
+  background: url("../images/bedAbout.jpg");
+  background-size: cover; }
+#roomDetails .room:nth-child(3) .imgRoom {
+  background: url("../images/bedAbout.jpg");
+  background-size: cover; }
+#roomDetails .room:nth-child(4) .imgRoom {
+  background: url("../images/bedAbout.jpg");
+  background-size: cover; }
+#roomDetails .room:nth-child(5) .imgRoom {
+  background: url("../images/bedAbout.jpg");
+  background-size: cover; }
+#roomDetails .room:nth-child(odd) {
+  background: #fff; }
+#roomDetails .room:nth-child(even) {
+  background: #272c2d;
+  color: #fff; }
+  #roomDetails .room:nth-child(even) .headerPanelRoomText h3 {
+    border-bottom: 2px solid #fff; }
+#roomDetails .room {
+  height: 40vh;
+  margin: 2em 0 2em 0;
+  padding-top: 3em; }
+  #roomDetails .room .picPanelRooms {
     height: 30vh; }
-    #roomDetails #superiorRoom .picPanelRooms img {
+    #roomDetails .room .picPanelRooms .imgRoom {
       height: 100%;
       width: 60%;
-      padding-left: 30%; }
+      margin-left: 30%; }
+  #roomDetails .room .headerPanelRoomText h3 {
+    font-size: 38px;
+    font-weight: 400;
+    border-bottom: 2px solid #000;
+    width: 50%;
+    padding-left: 0.2em;
+    padding-bottom: 0.2em; }
+
+/* ----------------------------
+---- ByteForce Indonesia ------
+------ Grand ABE's Website ----
+-----------------------------*/
+#headerBusinessandMeetings {
+  height: 0vh; }
+  #headerBusinessandMeetings .panelHeaderBusinessMeetings {
+    z-index: 1000;
+    width: 90%;
+    height: 15vh;
+    margin-top: -5vh;
+    background: #fff;
+    padding: 2em 1em 1em 0em;
+    box-shadow: 7px 12px 62px -12px rgba(0, 0, 0, 0.75); }
+    #headerBusinessandMeetings .panelHeaderBusinessMeetings h1 {
+      margin-left: 1em;
+      font-weight: 300;
+      font-size: 42px; }
+
+#headerBusiness {
+  padding: 12vh 5em 0 5em;
+  height: 40vh;
+  width: 100%;
+  background: #272c2d;
+  color: #fff; }
+  #headerBusiness p {
+    margin-top: 2em; }
+
+#packages {
+  height: 40vh;
+  width: 100%;
+  padding: 3em 0 2em 4em; }
+  #packages .packageImage {
+    margin-left: 3em;
+    height: 30vh;
+    width: 40vh;
+    background: url("../images/bedAbout.jpg"); }
+  #packages h1 {
+    font-size: 42px;
+    font-weight: 400;
+    padding-left: 0.2em;
+    padding-bottom: 0.1em;
+    border-bottom: 2px solid #000;
+    width: 40%;
+    margin-top: 1em; }
+
+#carousel {
+  background: #272c2d;
+  width: 100%;
+  height: 40vh; }
+
+/* ----------------------------
+---- ByteForce Indonesia ------
+------ Grand ABE's Website -------
+-----------------------------*/
+#whereAreWe {
+  height: 40vh;
+  width: 100%;
+  background: #272c2d; }
+  #whereAreWe .rightSideMaps {
+    color: #fff;
+    padding-top: 4em; }
+    #whereAreWe .rightSideMaps h1 {
+      border-bottom: 1px solid #fff;
+      width: 50%;
+      font-weight: 400; }
+    #whereAreWe .rightSideMaps p {
+      margin-top: 3em; }
+
+#headerTouristAttraction {
+  width: 100%; }
+  #headerTouristAttraction .panelHeaderTouristAttraction {
+    height: 15vh;
+    background: #fff;
+    margin-top: -7vh;
+    padding: 1.5em 0 0 2.4em;
+    box-shadow: 7px 12px 62px -12px rgba(0, 0, 0, 0.75); }
+    #headerTouristAttraction .panelHeaderTouristAttraction h1 {
+      font-size: 42px;
+      font-weight: 300; }
+
+#touristAttraction {
+  margin-top: 10vh;
+  height: 38vh; }
+  #touristAttraction .touristLeft h1 {
+    font-weight: 400;
+    border-bottom: 1px solid #000;
+    width: 75%;
+    padding-left: 0.2em; }
+  #touristAttraction .touristLeft p {
+    margin-top: 3em;
+    text-align: justify; }
+  #touristAttraction .imageTourist {
+    height: 30vh; }
+  #touristAttraction button .slick-prev, #touristAttraction button .slick-next, #touristAttraction button .slick-arrow {
+    color: #000;
+    background: #000; }
+
+#scattered {
+  padding-top: -10em;
+  height: 60vh;
+  overflow: hidden;
+  width: 100%;
+  background: #272c2d; }
+  #scattered #photostack-2 {
+    height: 60vh;
+    background: #272c2d; }
+
+/* ----------------------------
+---- ByteForce Indonesia ------
+------ Grand ABE's Website -------
+-----------------------------*/
+#weddings {
+  height: 50vh;
+  width: 100%;
+  padding-top: 5em;
+  background: #272c2d; }
+  #weddings .panelWedding h1 {
+    font-size: 42px;
+    font-weight: 300;
+    color: #fff;
+    border-bottom: 1px solid #fff;
+    width: 40%;
+    padding-left: 0.2em; }
+  #weddings .panelWedding p {
+    color: #fff;
+    padding-top: 2em;
+    width: 80%; }
+
+#birthdays {
+  height: 50vh;
+  width: 100%;
+  padding-top: 5em;
+  background: #272c2d; }
+  #birthdays .panelBirthday h1 {
+    font-size: 42px;
+    font-weight: 300;
+    color: #fff;
+    border-bottom: 1px solid #fff;
+    width: 100%;
+    padding-left: 0.2em;
+    text-align: right; }
+  #birthdays .panelBirthday p {
+    color: #fff;
+    padding-top: 2em; }
 
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  text-align: justify; }
 
 .darkerFilter {
   background: rgba(0, 0, 0, 0.4) !important;
@@ -36,6 +214,9 @@ body {
 
 .wrapper {
   overflow: hidden; }
+
+.fixed {
+  background-color: #fff !important; }
 
 #navigation {
   border: 0;
@@ -80,33 +261,18 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url("../images/home_large.jpg");
-  background-size: cover;
-  color: #fff; }
-  #firstPage .logoName {
-    margin-top: 3em; }
-    #firstPage .logoName h1 {
-      font-weight: 300; }
-      #firstPage .logoName h1 strong {
-        font-weight: 500; }
-  #firstPage .homeLine {
-    margin-top: 50%;
-    font-size: 16px; }
-    #firstPage .homeLine button {
-      margin-top: 1em;
-      border: 1px solid #fff;
-      font-weight: 300;
-      padding: 0.3em 1em 0.3em 1em;
-      font-size: 24px;
-      opacity: 0.7;
-      transition: opacity .35s ease-in-out;
-      background: transparent; }
-    #firstPage .homeLine button:hover {
-      opacity: 1; }
+  overflow: hidden;
+  color: #fff;
+  transition: 0s linear;
+  transition-property: background-position; }
+  #firstPage #parallax {
+    background: url("../images/home_large.jpg");
+    background-size: cover;
+    height: 100vh; }
 
 #footer {
   width: 100%;
-  height: 40vh;
+  height: 35vh;
   overflow: hidden; }
   #footer .leftPanel {
     background: #272c2d;
