--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,7 +19,7 @@ body
 {
 	background:rgba(0,0,0,0.4) !important;
 	height:100%;
-
+	z-index: 10000;
 }
 
 .fixed
@@ -93,9 +93,10 @@ body
 	position:relative;
 	width:100%;
 	height:100vh;
-	background:url('../images/home_large.jpg');
-	background-size: cover;
+	// background:url('../images/home_large.jpg');
+	// background-size: cover;
 	color: $font-primary;
+	overflow:hidden;
 
 	.logoName
 	{
@@ -133,6 +134,17 @@ body
 		{
 			opacity:1;
 		}
+	}
+
+	#parallax
+	{
+		background:url('../images/home_large.jpg');
+		background-size: cover;
+		height: 100%;
+		width:100%;
+		z-index: -1000;
+		position:absolute;
+		top:0;
 	}
 }
 
@@ -406,7 +418,7 @@ body
 #footer
 {
 	width:100%;
-	height:40vh;
+	height:35vh;
 	overflow:hidden;
 
 	.leftPanel
