--- a/assets/scss/styleNotHome.scss
+++ b/assets/scss/styleNotHome.scss
@@ -10,23 +10,31 @@ $font-primary: #fff;
 $font-secondary: #000;
 
 @import 'rooms';
+@import 'businessandmeetings';
+@import 'location';
+@import 'weddingsandbirthdays';
 
 body
 {
 	margin:0;
 	padding:0;
+	text-align: justify;
 }
 
 .darkerFilter
 {
 	background:rgba(0,0,0,0.4) !important;
 	height:100%;
-
 }
 
 .wrapper
 {
 	overflow:hidden;
+}
+
+.fixed
+{
+	background-color: #fff !important;
 }
 
 #navigation
@@ -105,53 +113,23 @@ body
 	position:relative;
 	width:100%;
 	height:100vh;
-	background:url('../images/home_large.jpg');
-	background-size: cover;
+	overflow: hidden;
 	color: $font-primary;
+    transition: 0s linear;
+    transition-property: background-position;
 
-	.logoName
+	#parallax
 	{
-		margin-top:3em;
-
-		h1
-		{
-			font-weight: 300;
-
-			strong
-			{
-				font-weight: 500;
-			}
-		}
-	}
-
-	.homeLine
-	{
-		margin-top:50%;
-		font-size: 16px;
-
-		button
-		{
-			margin-top:1em;
-			border: 1px solid $font-primary;
-			font-weight: 300;
-			padding:0.3em 1em 0.3em 1em;
-			font-size: 24px;
-			opacity:0.7;
-			transition: opacity .35s ease-in-out;
-			background:rgba(0,0,0,0);
-		}
-
-		button:hover
-		{
-			opacity:1;
-		}
+		background:url('../images/home_large.jpg');
+		background-size: cover;
+		height: 100vh;
 	}
 }
 
 #footer
 {
 	width:100%;
-	height:40vh;
+	height:35vh;
 	overflow:hidden;
 
 	.leftPanel
