--- a/assets/scss/styleNotHome.scss
+++ b/assets/scss/styleNotHome.scss
@@ -9,6 +9,7 @@ $secondary-color: #fff;
 $font-primary: #fff;
 $font-secondary: #000;
 
+@import 'media';
 @import 'rooms';
 @import 'businessandmeetings';
 @import 'location';
