--- a/assets/scss/rooms.scss
+++ b/assets/scss/rooms.scss
@@ -14,8 +14,13 @@
 		height:30vh;
 		margin-top:-10vh;
 		background:$secondary-color;
-		padding:1em;
+		padding:1em 2em 1em 2em;
 		box-shadow: 7px 12px 62px -12px rgba(0,0,0,0.75);
+
+		p
+		{
+			margin-top: 2em;
+		}
 	}
 	
 }
@@ -111,7 +116,7 @@
 				font-size: 38px;
 				font-weight: 400;
 				border-bottom: 2px solid #000;
-				width:50%;
+				width:60%;
 				padding-left:0.2em;
 				padding-bottom:0.2em;
 			}
