--- a/assets/scss/businessandmeetings.scss
+++ b/assets/scss/businessandmeetings.scss
@@ -6,6 +6,7 @@
 #headerBusinessandMeetings
 {
 	height:0vh;
+	font-weight: 300;		
 
 	.panelHeaderBusinessMeetings
 	{
@@ -34,6 +35,7 @@
 	width:100%;
 	background:$primary-color;
 	color:$font-primary;
+	font-weight: 300;
 
 	p
 	{
@@ -46,6 +48,7 @@
 	height:40vh;
 	width:100%;
 	padding:3em 0 2em 4em;
+	font-weight: 300;
 
 	.packageImage
 	{
