--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,6 +13,8 @@ body
 {
 	margin:0;
 	padding:0;
+
+	font-family: 'Roboto', sans-serif !important;
 }
 
 .darkerFilter
@@ -29,6 +31,12 @@ body
 	top:0 !important;
 	background:#fff !important;
 	width:100% !important;
+	
+	a
+	{
+		color: #000 !important;
+	}
+	
 }
 
 #navigation
@@ -48,6 +56,12 @@ body
 	transition:all .2s ease-in-out;
 	z-index:1000;
 
+	.navbar-brand
+	{
+		color:#ccc;
+		
+	}
+
 	#navbar
 	{
 		margin:0;
@@ -65,6 +79,8 @@ body
 			background:rgba(0,0,0,0);
 			opacity: 0.8;
 			transition:all .2s ease-in-out;
+			font-weight: 300;
+
 		}
 
 		a:hover
@@ -128,11 +144,13 @@ body
 			opacity:0.7;
 			transition: opacity .35s ease-in-out;
 			background:rgba(0,0,0,0);
+			color:#fff;
 		}
 
 		button:hover
 		{
 			opacity:1;
+			cursor:pointer;
 		}
 	}
 
@@ -150,17 +168,17 @@ body
 
 #pageTwo
 {
-	min-height:60vh;
+	height:60vh;
 	width:100%;
 
 	#booking
 	{
 		height:37vh;
 		background:$primary-color;
+		padding-top:2em;
 
 		.bookingNow
 		{
-			margin-top:5em;
 			color:$font-primary;
 
 			h1
@@ -177,7 +195,7 @@ body
 		.bookingPanel
 		{
 			width:80%;
-			height:35vh;
+			height:350px;
 			background:$secondary-color;
 			margin-top:3em;
 			box-shadow: 7px 12px 62px -12px rgba(0,0,0,0.75);
@@ -202,7 +220,7 @@ body
 				select
 				{
 					margin-top: 1.5em;
-					font-size: 0;
+					font-size: 10px;
 					background-color: $primary-color;
 				}
 			}
@@ -225,7 +243,7 @@ body
 				select
 				{
 					margin-top: 1.5em;
-					font-size: 0;
+					font-size: 10px;
 					background-color: $primary-color;
 				}
 			}
@@ -248,7 +266,7 @@ body
 				select
 				{
 					margin-top: 1.5em;
-					font-size: 0;
+					font-size: 10px;
 					background-color: $primary-color;
 				}
 			}
@@ -285,6 +303,7 @@ body
 				input[type=submit]:hover
 				{
 					border: 1px solid #000;
+					cursor: pointer;
 				}
 			}
 		}
@@ -353,10 +372,11 @@ body
 
 	.aboutUsParagraph
 	{
-		margin-top:5vh;
+		margin-top:2vh;
 
 		p
 		{
+			font-weight: 300;
 			margin-top:2em;
 			color:#fff;
 		}
@@ -460,3 +480,6 @@ body
 		}
 	}
 }
+
+// media at the last
+@import 'media';
