--- a/assets/scss/styleNotHome.scss
+++ b/assets/scss/styleNotHome.scss
@@ -9,7 +9,6 @@ $secondary-color: #fff;
 $font-primary: #fff;
 $font-secondary: #000;
 
-@import 'media';
 @import 'rooms';
 @import 'businessandmeetings';
 @import 'location';
@@ -36,6 +35,11 @@ body
 .fixed
 {
 	background-color: #fff !important;
+}
+
+.noLogoNav
+{
+	display:none !important;
 }
 
 #navigation
@@ -172,3 +176,7 @@ body
 		}
 	}
 }
+
+
+// medias are last
+@import 'media';
