--- a/assets/scss/weddingsandbirthdays.css
+++ b/assets/scss/weddingsandbirthdays.css
@@ -1,35 +1,24 @@
 /*
-Error: Undefined variable: "$secondary-color".
-        on line 16 of /Applications/XAMPP/xamppfiles/htdocs/GrandABEHotel/assets/scss/rooms.scss
+Error: Undefined variable: "$primary-color".
+        on line 11 of /Applications/XAMPP/xamppfiles/htdocs/GrandABEHotel/assets/scss/weddingsandbirthdays.scss
 
-11: 	{
-12: 		z-index:1000;
-13: 		width:100%;
-14: 		height:30vh;
-15: 		margin-top:-10vh;
-16: 		background:$secondary-color;
-17: 		padding:1em 2em 1em 2em;
-18: 		box-shadow: 7px 12px 62px -12px rgba(0,0,0,0.75);
-19: 
-20: 		p
-21: 		{
+6: #weddings
+7: {
+8: 	height:50vh;
+9: 	width:100%;
+10: 	padding-top: 5em;
+11: 	background:$primary-color;
+12: 
+13: 	.panelWedding
+14: 	{
+15: 		h1
+16: 		{
 
 Backtrace:
-/Applications/XAMPP/xamppfiles/htdocs/GrandABEHotel/assets/scss/rooms.scss:16
+/Applications/XAMPP/xamppfiles/htdocs/GrandABEHotel/assets/scss/weddingsandbirthdays.scss:11
 /Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/script/tree/node.rb:50:in `perform'
 /Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:384:in `visit_prop'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:79:in `block in with_base'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:115:in `with_frame'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:79:in `with_base'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
 /Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
 /Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 /Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:79:in `block in with_base'
@@ -73,4 +62,4 @@ Backtrace:
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$secondary-color\".\A         on line 16 of /Applications/XAMPP/xamppfiles/htdocs/GrandABEHotel/assets/scss/rooms.scss\A \A 11: 	{\A 12: 		z-index:1000;\A 13: 		width:100%;\A 14: 		height:30vh;\A 15: 		margin-top:-10vh;\A 16: 		background:$secondary-color;\A 17: 		padding:1em 2em 1em 2em;\A 18: 		box-shadow: 7px 12px 62px -12px rgba(0,0,0,0.75);\A 19: \A 20: 		p\A 21: 		{"; }
+  content: "Error: Undefined variable: \"$primary-color\".\A         on line 11 of /Applications/XAMPP/xamppfiles/htdocs/GrandABEHotel/assets/scss/weddingsandbirthdays.scss\A \A 6: #weddings\A 7: {\A 8: 	height:50vh;\A 9: 	width:100%;\A 10: 	padding-top: 5em;\A 11: 	background:$primary-color;\A 12: \A 13: 	.panelWedding\A 14: 	{\A 15: 		h1\A 16: 		{"; }
