--- a/assets/scss/weddingsandbirthdays.scss
+++ b/assets/scss/weddingsandbirthdays.scss
@@ -18,7 +18,8 @@
 			font-weight: 300;
 			color:#fff;
 			border-bottom: 1px solid #fff;
-			width:40%;
+			width:100%;
+			padding-bottom: 10px;
 			padding-left:0.2em;
 		}
 
@@ -48,6 +49,7 @@
 			border-bottom: 1px solid #fff;
 			width:100%;
 			padding-left:0.2em;
+			padding-bottom: 10px;
 			text-align: right;
 		}
 
