--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -2,16 +2,10 @@
 ---- ByteForce Indonesia ------
 ------ Grand ABE's Website -------
 -----------------------------*/
-/* ----------------------------
----- ByteForce Indonesia ------
------- Grand ABE's Website -------
------------------------------*/
-@media screen and (max-device-width: 1200px) {
-  #page-two {
-    height: 80vh; } }
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: 'helvetica' !important; }
 
 .darkerFilter {
   background: rgba(0, 0, 0, 0.4) !important;
@@ -24,6 +18,8 @@ body {
   top: 0 !important;
   background: #fff !important;
   width: 100% !important; }
+  .fixed a {
+    color: #000 !important; }
 
 #navigation {
   border: 0;
@@ -32,17 +28,20 @@ body {
   padding: 0 2em 0 2em;
   margin-bottom: 0;
   bottom: 0;
-  height: 5vh;
+  height: 10vh;
   width: 100%;
   border-radius: 0;
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-weight: 300;
   position: absolute;
   transition: all .2s ease-in-out;
   z-index: 1000; }
+  #navigation .navbar-brand {
+    color: #ccc; }
   #navigation #navbar {
     margin: 0;
-    border: 0; }
+    border: 0;
+    transition: all .2s ease-in-out; }
     #navigation #navbar .in {
       background: #fff;
       border: 0; }
@@ -50,7 +49,8 @@ body {
       color: #ccc;
       background: transparent;
       opacity: 0.8;
-      transition: all .2s ease-in-out; }
+      transition: all .2s ease-in-out;
+      font-weight: 300; }
     #navigation #navbar a:hover {
       color: #333; }
     #navigation #navbar ul li .active a {
@@ -78,10 +78,15 @@ body {
       padding: 0.3em 1em 0.3em 1em;
       font-size: 24px;
       opacity: 0.7;
-      transition: opacity .35s ease-in-out;
-      background: transparent; }
+      transition: all .35s ease-in-out;
+      background: transparent;
+      color: #fff;
+      outline: none; }
     #firstPage .homeLine button:hover {
-      opacity: 1; }
+      opacity: 1;
+      cursor: pointer; }
+    #firstPage .homeLine button:active {
+      border: 1px solid red; }
   #firstPage #parallax {
     background: url("../images/home_large.jpg");
     background-size: cover;
@@ -92,13 +97,13 @@ body {
     top: 0; }
 
 #pageTwo {
-  min-height: 60vh;
+  height: 66vh;
   width: 100%; }
   #pageTwo #booking {
     height: 37vh;
-    background: #272c2d; }
+    background: #272c2d;
+    padding-top: 2em; }
     #pageTwo #booking .bookingNow {
-      margin-top: 5em;
       color: #fff; }
       #pageTwo #booking .bookingNow h1 {
         font-weight: 300; }
@@ -106,7 +111,7 @@ body {
           font-weight: 500; }
     #pageTwo #booking .bookingPanel {
       width: 80%;
-      height: 300px;
+      height: 350px;
       background: #fff;
       margin-top: 3em;
       box-shadow: 7px 12px 62px -12px rgba(0, 0, 0, 0.75);
@@ -121,7 +126,7 @@ body {
         font-weight: 300; }
       #pageTwo #booking .bookingPanel .day select {
         margin-top: 1.5em;
-        font-size: 0;
+        font-size: 10px;
         background-color: #272c2d; }
       #pageTwo #booking .bookingPanel .month #monthBig {
         margin-top: -5px;
@@ -132,7 +137,7 @@ body {
         font-weight: 300; }
       #pageTwo #booking .bookingPanel .month select {
         margin-top: 1.5em;
-        font-size: 0;
+        font-size: 10px;
         background-color: #272c2d; }
       #pageTwo #booking .bookingPanel .year #yearBig {
         margin-top: -5px;
@@ -143,7 +148,7 @@ body {
         font-weight: 300; }
       #pageTwo #booking .bookingPanel .year select {
         margin-top: 1.5em;
-        font-size: 0;
+        font-size: 10px;
         background-color: #272c2d; }
       #pageTwo #booking .bookingPanel .formBook input[type=text] {
         margin-top: 2.7em;
@@ -164,7 +169,8 @@ body {
         width: 100%;
         transition: border .35s ease-in-out; }
       #pageTwo #booking .bookingPanel .formBook input[type=submit]:hover {
-        border: 1px solid #000; }
+        border: 1px solid #000;
+        cursor: pointer; }
 
 #pageThree {
   width: 100%;
@@ -201,8 +207,9 @@ body {
       color: #fff;
       margin-left: 10px; }
   #pageFour .aboutUsParagraph {
-    margin-top: 5vh; }
+    margin-top: 2vh; }
     #pageFour .aboutUsParagraph p {
+      font-weight: 300;
       margin-top: 2em;
       color: #fff; }
 
@@ -263,5 +270,120 @@ body {
     #footer .rightPanel p {
       font-size: 14px;
       font-weight: 40; }
+
+@media screen and (max-width: 1200px) {
+  #pageTwo {
+    height: 170vh; }
+    #pageTwo .bookingPanel {
+      height: 1180px !important; }
+
+  #navbar {
+    margin: 0;
+    border: 0;
+    background: #fff;
+    padding: 1em;
+    width: 100vh; }
+
+  #pageFour {
+    height: 65vh; }
+
+  .bigLogo {
+    display: none !important; }
+
+  #navigation {
+    padding: 1em 2em 1em 2em; }
+
+  #headerBusiness {
+    height: 50vh; }
+
+  #packages {
+    height: auto;
+    padding: 3em 0 2em 0; }
+    #packages .packageImage {
+      margin: auto;
+      width: 100%; }
+    #packages p {
+      margin-top: 2em; }
+
+  #whereAreWe .rightSideMaps {
+    padding: 5em 2em 0 2em; }
+
+  #headerTouristAttraction .panelHeaderTouristAttraction {
+    height: 15vh;
+    width: auto; }
+
+  #weddings {
+    padding-left: 2em;
+    padding-right: 2em; }
+
+  #birthdays {
+    padding-left: 2em;
+    padding-right: 2em; }
+
+  #footer {
+    height: auto; }
+    #footer .rightPanel {
+      padding-left: 5vh; } }
+@media screen and (max-width: 992px) {
+  #headerRooms .panelHeaderRooms {
+    height: 25vh;
+    padding-top: 2.5em; }
+
+  #roomDetails .room {
+    height: 65vh;
+    font-weight: 300; }
+    #roomDetails .room p {
+      margin-top: 2em; }
+    #roomDetails .room .picPanelRooms .imgRoom {
+      margin: auto; }
+    #roomDetails .room .headerPanelRoomText {
+      padding: 0 2vh 0 2vh; }
+
+  #headerBusiness {
+    height: 55vh; }
+
+  #headerBusinessandMeetings .panelHeaderBusinessMeetings {
+    height: 12vh; } }
+@media screen and (max-width: 768px) {
+  #headerRooms .panelHeaderRooms {
+    height: 25vh;
+    padding-top: 2.5em; }
+
+  #roomDetails .room {
+    height: 65vh;
+    font-weight: 300; }
+    #roomDetails .room p {
+      margin-top: 2em; }
+    #roomDetails .room .picPanelRooms .imgRoom {
+      margin: auto; }
+    #roomDetails .room .headerPanelRoomText {
+      padding: 0 2vh 0 2vh; }
+
+  #touristAttraction {
+    height: 65vh; }
+    #touristAttraction .leftSideTourist {
+      width: 100%;
+      padding: 0 2em 0 2em;
+      float: left;
+      margin-bottom: 2em; }
+    #touristAttraction .rightSideTourist {
+      width: 100%;
+      padding: 0 2em 0 2em;
+      float: left; }
+
+  #pageFour {
+    height: auto;
+    padding-bottom: 2em; }
+    #pageFour .aboutUsParagraph {
+      padding: 0 1em 0 1em; }
+
+  #footer .rightPanel {
+    padding-left: 5vh; } }
+@media screen and (max-width: 588px) {
+  #pageTwo {
+    height: 180vh; }
+
+  #whereAreWe {
+    height: 55vh; } }
 
 /*# sourceMappingURL=style.css.map */
