--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,7 +14,8 @@ body
 	margin:0;
 	padding:0;
 
-	font-family: 'Roboto', sans-serif !important;
+	// font-family: 'Roboto', sans-serif !important;
+	font-family: 'helvetica' !important;
 }
 
 .darkerFilter
@@ -47,10 +48,10 @@ body
 	padding:0 2em 0 2em;
 	margin-bottom:0;
 	bottom: 0;
-	height:5vh;
+	height:10vh;
 	width:100%;
 	border-radius: 0;
-	font-size: 1.5em;
+	font-size: 1.2em;
 	font-weight: 300;
 	position:absolute;
 	transition:all .2s ease-in-out;
@@ -66,6 +67,7 @@ body
 	{
 		margin:0;
 		border:0;
+		transition:all .2s ease-in-out;
 
 		.in
 		{
@@ -142,15 +144,21 @@ body
 			padding:0.3em 1em 0.3em 1em;
 			font-size: 24px;
 			opacity:0.7;
-			transition: opacity .35s ease-in-out;
+			transition: all .35s ease-in-out;
 			background:rgba(0,0,0,0);
 			color:#fff;
+			outline: none;
 		}
 
 		button:hover
 		{
 			opacity:1;
 			cursor:pointer;
+		}
+
+		button:active
+		{
+			border:1px solid red;
 		}
 	}
 
@@ -168,7 +176,7 @@ body
 
 #pageTwo
 {
-	height:60vh;
+	height:66vh;
 	width:100%;
 
 	#booking
